crates/keron-lang/tests/corpus/errors/check/secret_eq_string.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `==` requires `String`, `Int`, `Boolean`, or `Double` operands, found `Secret` and `String`
  --> 3:22
  |
3 | val guess: Boolean = token == "hunter2"
  |                      ^^^^^^^^^^^^^^^^^^
